--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile.fixed
+      dockerfile: Dockerfile
     restart: unless-stopped
     ports:
       - "3000:3000"
